# cat-health-interface

./: README.md  appspec.yml
.claude/: settings.json
backend/: .gitignore  README.md  auth.py  main.py  pyproject.toml
backend/app/: app.py  config.py
backend/app/db/: database.py
backend/app/models/: cat.py  poop.py  user.py
backend/app/routers/: auth.py  cats.py  poops.py  root.py
backend/model/: cat.py
backend/scripts/: ensure_uv.sh  fix_backend_permissions.sh  install_dependencies.sh  start_server.sh  stop_server.sh  validate_service.sh
frontend-mobile/: app.json  package-lock.json  package.json
frontend-mobile/app/: _layout.tsx  index.tsx  login.tsx  signup.tsx
frontend-mobile/app/(app)/: _layout.tsx  index.tsx  poops.tsx  settings.tsx
frontend-mobile/lib/: auth.ts  cat-context.tsx  selected-cat.ts
frontend-web/: README.md  package.json
frontend-web/app/: root.tsx  routes.ts
frontend-web/app/lib/: auth.ts  cat-context.tsx  selected-cat.ts
frontend-web/app/routes/: app-layout.tsx  dashboard-cats.tsx  dashboard-home.tsx  dashboard-poops.tsx  dashboard-settings.tsx  dashboard.tsx  home.tsx  login.tsx  signup.tsx
