[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0.48",
]
